--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=0, minimal-ui"
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui"
     />
     <meta name="screen-orientation" content="portrait" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -10,7 +10,7 @@
     <meta name="full-screen" content="yes" />
     <meta name="x5-fullscreen" content="true" />
     <meta http-equiv="x-rim-auto-match" content="none">
-    <title>stackdemo</title>
+    <title>滑出你的最爱-左滑丢弃 右滑喜欢</title>
   </head>
   <body>
     <div id="app"></div>
